# whalecrab

./: .gitignore  Cargo.toml  README.md  flake.nix  todo.txt
benches/: common.rs  evaluation.rs  movegen.rs  movemaking.rs  scoring.rs
demos/: Cargo.toml
engine/: Cargo.toml
engine/benches/: common.rs  evaluation.rs  iterative_deepening.rs  minimax.rs  negamax.rs  scoring.rs  timers.rs
engine/src/: engine.rs  lib.rs  move_result.rs  piece_eval.rs  resources.rs  score.rs  scoring.rs  transposition_table.rs
engine/src/piece_eval/: mod.rs  tables.rs
engine/src/search/: iterative_deepening.rs  minimax.rs  mod.rs  move_ordering.rs  negamax.rs
engine/src/timers/: analog_remote.rs  elapsed.rs  infinite.rs  mod.rs  move_timer.rs  rdtsc.rs  remote.rs
essex/: Cargo.toml
essex/src/: boat.rs  cli.rs  database.rs  main.rs
examples/: engine_vs_self.rs  random_engine.rs
lib/: Cargo.toml
lib/benches/: common.rs  evaluation.rs  movegen.rs  movegen2.rs  movemaking.rs  piece_iteration.rs  scoring.rs  unsafe_vec.rs
lib/src/: bitboard.rs  board.rs  castling.rs  file.rs  game.rs  lib.rs  piece_getters.rs  piece_table.rs  rank.rs  square.rs  test_utils.rs  utils.rs  vectors.rs
lib/src/engine/: engine.rs  mod.rs  piece_eval.rs  score.rs
lib/src/movegen/: legal_moves.rs  make.rs  mod.rs  moves.rs  unmake.rs  utils.rs
lib/src/movegen/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  piece.rs  queen.rs  rook.rs
lib/src/position/: castling.rs  game.rs  generator.rs  legality.rs  mod.rs  piece_table.rs  previous.rs
logging/: Cargo.toml
logging/src/: lib.rs
magic_tables/: Cargo.toml
magic_tables/src/: lib.rs
magician/: Cargo.toml
magician/src/: bishops.rs  cli.rs  lib.rs  main.rs  rooks.rs
magics/: Cargo.toml
magics/src/: bishops.rs  lib.rs  rooks.rs
panic_logger/: Cargo.toml
panic_logger/src/: lib.rs
scripts/: sourceme.nu
src/: bitboard.rs  board.rs  castling.rs  engine.rs  file.rs  game.rs  generator.rs  lib.rs  main.rs  movegen.rs  rank.rs  square.rs  test_utils.rs
src/engine/: engine.rs  piece_eval.rs
src/movegen/: mod.rs  movegen.rs  moves.rs
src/movegen/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  piece.rs  queen.rs  rook.rs
src/pieces/: mod.rs  white_pawn.rs
tui/: Cargo.toml
tui/src/: ascii.rs  focus.rs  main.rs  menufocus.rs  playertype.rs  textbox.rs
uci/: Cargo.toml
uci/src/: command.rs  interface.rs  logger.rs  main.rs  test_utils.rs
uci/src/logging/: ansi.rs  logger.rs  mod.rs
