[workspace]
members = ["lib", "demos", "uci", "tui", "engine", "essex", "panic_logger"]
resolver = "2"

[workspace.package]
version = "1.5.5"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
codegen-units = 16
lto = "thin"

# Useful for speeding up essex
[profile.canary]
inherits = "bench"
debug-assertions = true
strip = false
panic = "unwind"
