[workspace]
members = ["lib", "demos", "uci", "tui", "engine", "essex", "panic_logger"]
resolver = "2"

[workspace.package]
version = "1.5.5"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
codegen-units = 16
lto = "thin"

# Useful for speeding up essex and debugging long searches.
#
# Tests prefixed with `canary_` should be ran with this profile, usually because they would be too slow to run without optimizations.
# You can run only canary tests using the bellow command:
# ```sh
# cargo test --profile canary canary_ -- --ignored
# ```
#
# Or, run all tests including canary:
# ```sh
# cargo test --profile canary -- --include-ignored
# ```
[profile.canary]
inherits = "bench"
debug-assertions = true
strip = false
panic = "unwind"
