[workspace]
members = ["lib", "demos", "uci", "tui", "engine", "essex", "panic_logger", "magician", "magics"]
resolver = "2"

[workspace.package]
version = "1.5.8"
edition = "2024"

# This is the most performant set of flags I have found
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"

# This is the second most performant set of flags I have found.
# These flags also allow for a much faster build time than the release profile.
[profile.bench]
inherits = "release"
codegen-units = 16
lto = "thin"

# Useful for speeding up essex and debugging long searches.
#
# Tests prefixed with `canary_` should be ran with this profile, usually because they would be too slow to run without optimizations.
# You can run only canary tests using the bellow command:
# ```sh
# cargo test --profile canary canary_ -- --ignored
# ```
#
# Or, run all tests including canary:
# ```sh
# cargo test --profile canary -- --include-ignored
# ```
[profile.canary]
inherits = "bench"
debug-assertions = true
strip = false
panic = "unwind"
