[package]
name = "whalecrab_engine"
version.workspace = true
edition.workspace = true

[[bench]]
name = "minimax"
harness = false

[[bench]]
name = "iterative_deepening"
harness = false

[[bench]]
name = "scoring"
harness = false

[[bench]]
name = "timers"
harness = false

[dependencies]
whalecrab_lib = { path = "../lib" }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
